<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


    <ImageView
        android:layout_width="115dp"
        android:layout_height="114dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="125dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/enter"
        android:textAlignment="gravity"
        android:textSize="24sp"
        android:textColor="@color/black"/>
//first name
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/black"
        >

        <AutoCompleteTextView
            android:id="@+id/register_first_name"
            android:layout_width="385dp"
            android:layout_height="match_parent"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColor="@color/black"
            />
    </android.support.design.widget.TextInputLayout>
//last name
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:id="@+id/register_last_name"
            android:inputType="text"
            android:textColor="@color/black"/>
    </android.support.design.widget.TextInputLayout>

    //age
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:id="@+id/register_age"
            android:inputType="number"
            android:textColor="@color/black"/>
    </android.support.design.widget.TextInputLayout>

//nationality
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nationality"
            android:id="@+id/register_nation"
            android:inputType="text"
            android:textColor="@color/black"/>
    </android.support.design.widget.TextInputLayout>
//state
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state"
            android:id="@+id/register_state"
            android:inputType="text"
            android:textColor="@color/black"/>
    </android.support.design.widget.TextInputLayout>
    //email

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/register_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"/>
    </android.support.design.widget.TextInputLayout>

    //password
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/register_password"
            android:inputType="textPassword"
            android:textColor="@color/black"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:id="@+id/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/black"/>
    </android.support.design.widget.TextInputLayout>

    //submit

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btn"
        android:hint="@string/submit_btn"
        android:onClick="signUp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>

</ScrollView>